<resources>
    <string name="app_name">permaisuriban</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home">Home</string>
    <string name="title_favourites">Favourite</string>
    <string name="title_cart">Cart</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_account">Account</string>
    <string name="title_transaction_detail">Transaction Detail</string>
</resources>
