<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_trans"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>
